--- a/.github/workflows/otc-verify.yml
+++ b/.github/workflows/otc-verify.yml
@@ -26,9 +26,8 @@ jobs:
           --data '{
           "username": "SRUTH",
           "password": "Healthfirst*123"
-          }' \
-          | jq -r '.id_token')
-          echo "GET and SAVE token from API ID_TOKEN::$ID_TOKEN"
+          }')
+          echo "GET and SAVE token from API ID_TOKEN::$ID_TOKEN['id_token']"
           
       - name: Send Request with id Token
         run: |
