--- a/.github/workflows/otc-verify.yml
+++ b/.github/workflows/otc-verify.yml
@@ -28,7 +28,7 @@ jobs:
           "password": "Healthfirst*123"
           }')
           echo "RESPONSE::$RESPONSE"
-          ID_TOKEN=$(echo "$RESPONSE" | jq -r '.token_type')
+          ID_TOKEN=$(echo "$RESPONSE" | jq -r '.data.token_type')
           echo "GET and SAVE token from API ID_TOKEN::$ID_TOKEN"
           
       - name: Send Request with id Token
